# cairo-fuzzer

./: .gitignore  .gitmodules  .pre-commit-hook  Cargo.toml  Makefile  README.md  USAGE.md  setup.sh
.github/workflows/: rust.yml
archive/cairo-libafl/src/: main.rs
archive/cairo-libafl/tests/: return_10.json
archive/testing_archives/: Cargo.toml
archive/testing_archives/fuzz/fuzz_targets/: utils.rs
archive/testing_archives/fuzz/json/: vuln.cairo
archive/testing_archives/json/: example_program.cairo
archive/testing_archives/src/: main copy.rs  main.rs  parse_json.rs
archive/testing_archives/src/cairo_rs_py/: cairo_run.rs  cairo_runner.rs  ecdsa.rs  ids.rs  memory.rs  memory_segments.rs  mod.rs  range_check.rs  relocatable.rs  run_context.rs  scope_manager.rs  to_felt_or_relocatable.rs  utils.rs  vm_core.rs
cairo-fuzz/: Cargo.toml  Makefile  config.json
cairo-fuzz/src/: main.rs  rng.rs
cairo-fuzz/src/cairo_vm/: cairo_runner.rs  cairo_types.rs  mod.rs
cairo-fuzz/src/cli/: args.rs  config.rs
cairo-fuzz/src/custom_rand/: mod.rs  rng.rs
cairo-fuzz/src/fuzzer/: corpus.rs  fuzzer.rs  fuzzing_worker.rs  inputs.rs  mod.rs  replay_worker.rs  stats.rs  worker.rs
cairo-fuzz/src/json/: json_parser.rs  mod.rs
cairo-fuzz/src/minimizer/: minimizer.rs  mod.rs
cairo-fuzz/src/mutator/: magic_values.rs  mutator.rs
cairo-fuzz/src/replay/: replay.rs
cairo-fuzz/src/tests/: targets.rs
cairo-fuzz/tests/: fuzzinglabs.json  lambdaclass_example.json  test_symbolic_execution_inputs.json  zerodivide.cairo  zerodivide.json
cairo-libafl/: .gitignore  Cargo.toml  README.md
cairo-libafl/archives/: main.rs
cairo-libafl/json/: return_10.cairo
cairo-libafl/src/: args.rs  basic_fuzzer_multithread.rs  basic_main.rs  main.rs  parse_json.rs  utils.rs
cairo-libafl/src/cairo_vm/: cairo_runner.rs
cairo-libafl/src/input_generator/: generator.rs
cairo-libafl/src/utils/: cairo_runner.rs  macros.rs  mod.rs  parse_json.rs
cairo-libafl/tests/: zerodivide.cairo  zerodivide.json
cairo-native-fuzzer/: .gitignore  Cargo.toml  README.md  install.sh
cairo-native-fuzzer/examples/: echo.cairo  fuzzinglabs.cairo  hello.cairo  hello_starknet.cairo  proptesting.cairo
cairo-native-fuzzer/examples/cairo/: echo.cairo
cairo-native-fuzzer/examples/sierra/: hello_starknet__hello_starknet.contract_class.json  zklend_fuzzing.json
cairo-native-fuzzer/src/: main.rs  utils.rs
cairo-native-fuzzer/src/custom_rand/: rng.rs
cairo-native-fuzzer/src/fuzzer/: fuzzer.rs  mod.rs  statistics.rs  utils.rs
cairo-native-fuzzer/src/mutator/: argument_type.rs  basic_mutator.rs  mod.rs  mutator.rs
cairo-native-fuzzer/src/runner/: mod.rs  runner.rs  syscall_handler.rs
cairo-native-runner/: Cargo.toml
cairo-native-runner/src/: main.rs
crash_dir/: 2024-02-29--03:20:06-Fuzz_symbolic_execution.json  2024-02-29--12:30:03-Fuzz_symbolic_execution.json  2024-03-01--12:50:55-storage_test.json  2024-03-01--12:52:48-storage_test.json  2024-03-01--15:34:46-Fuzz_symbolic_execution.json
docs/: TUTO101.md  USAGE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cairo_fuzzer.rs  cairo_fuzzer_cargo_fuzz.rs
json/: value.cairo
rustic_cairo/: Cargo.toml  README.md  config.json
rustic_cairo/corpus_dir/: 2024-02-13--16:14:28.json  2024-02-13--16:14:29.json  2024-02-13--16:14:30.json
rustic_cairo/docs/: USAGE.md
rustic_cairo/src/: main.rs
rustic_cairo/src/cli/: args.rs  config.rs
rustic_cairo/src/fuzzer/: coverage.rs  crash.rs  error.rs  fuzzer.rs  fuzzer_utils.rs  mod.rs  stats.rs
rustic_cairo/src/json_helper/: json_parser.rs
rustic_cairo/src/mutator/: basicmutator.rs  mod.rs  mutator.rs  mutator_felt252.rs  rng.rs  types.rs
rustic_cairo/src/runner/: mod.rs  runner.rs  starknet_runner.rs
rustic_cairo/src/ui/: mod.rs  ui.rs  utils.rs  widget.rs
rustic_cairo/src/worker/: worker.rs
rustic_cairo/tests1.0/: fuzzinglabs_fuzz.casm  fuzzinglabs_init.cairo  test_symbolic_execution_2022-12-22--10:18:57.json  teststorage.casm
script/: Cargo.toml
script/src/: increase_balance.rs
scripts/: Cargo.toml
scripts/src/: main.rs  starknet_fuzz.rs
src/: lib.rs  main.rs  parse_json.rs  utils.rs
src/POC/: main.rs  mint.sh
src/cairo_vm/: cairo_runner.rs  cairo_types.rs  mod.rs
src/cli/: args.rs  config.rs  mod.rs
src/custom_rand/: mod.rs  rng.rs
src/fuzzer/: cairo_worker.rs  cairoworker.rs  corpus.rs  corpus_crash.rs  corpus_input.rs  crash.rs  dict.rs  error.rs  fuzzer.rs  fuzzer_utils.rs  mod.rs  starknet_worker.rs  starknetworker.rs  stats.rs  utils.rs  worker.rs
src/json/: json_parser.rs  mod.rs
src/json_helper/: json_parser.rs  mod.rs
src/mutator/: basicmutator.rs  mod.rs  mutator.rs  mutator_felt252.rs  mutator_u8.rs
src/runner/: cairo_runner.rs  mod.rs  runner.rs  starknet_runner.rs
src/starknet/: mod.rs  starknet_runner.rs
src/starknet_helper/: devnet.rs  mint.sh  mod.rs  starknet.rs  starknet_runner.rs  starknet_worker.rs
src/tests/: runner.rs  starknet_fuzz.rs
src/ui/: mod.rs  ui.rs  widget.rs
test-generator/: Cargo.toml  README.md
test-generator/src/: main.rs
testing_archives/fuzz/fuzz_targets/: parse_json.rs
testing_archives/json/: vuln.json
testing_archives/src/: main.rs
tests/: assert_not_zero.cairo  assert_not_zero.json  complex_felt.cairo  complex_felt.json  config.json  dict  example_program.json  fuzzinglabs-hints.cairo  fuzzinglabs-hints.json  fuzzinglabs-proptesting.cairo  fuzzinglabs-proptesting.json  fuzzinglabs-starknet.cairo  fuzzinglabs-starknet.json  fuzzinglabs.cairo  fuzzinglabs.json  fuzzinglabs_starknet_2023-04-04--12:38:47.json  increase_balance.cairo  increase_balance.json  output.casm  output.json  overflow.cairo  overflow.json  storage.cairo  storage.json  test1.0.cairo  test_deploy.json  test_symbolic_execution_2022-12-22--10:18:57.json  xor.cairo  xor.json
tests1.0/: config.json  fuzzinglabs.cairo  fuzzinglabs.casm  fuzzinglabs.json  fuzzinglabs_fuzz.cairo  fuzzinglabs_fuzz.json  fuzzinglabs_init.cairo  fuzzinglabs_init.casm  fuzzinglabs_init.json  fuzzinglabs_show.cairo  teststorage.cairo  teststorage.json
(+2 files in other folders)
