[package]
name = "cairo-fuzzer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
memory-stats = "1.1.0"

[dependencies]
bichannel = "0.0.4"
clap = { version = "4.4.4", features = ["derive"] }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
serde = "*"
serde_json = "1.0.107"
num-traits = '0.2.15'
strum = { version = "0.25", features = ["derive"] }
crossterm = "0.27.0"
time = "0.3.29"
chrono = "0.4.31"
itertools = "0.12.0"
log = "0.4.20"
cairo-lang-starknet = "=2.5.4"
cairo-lang-casm = "=2.5.4"
cairo-vm = { git ="https://github.com/FuzzingLabs/cairo-rs", rev = "3c9fd45d0e3fabb5ca1cf088bc22db5e512fea45", features = ["cairo-1-hints"] }


[dependencies.starknet-rs]
git="https://github.com/FuzzingLabs/starknet_in_rust"
rev="cb96e6ec86f53fa4ba0e53cf038471df0523d0d2"
package = 'starknet_in_rust'

[dependencies.num-bigint]
version = '0.4'
features = ['serde']