[package]
name = "cairo-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { git="https://github.com/raefko/cairo-rs/", rev="8e06bf1179643a25e7590551745b38723d2b11b9"}
chrono = "0.4.19"
rand = "0.8.5"
num-bigint = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = "*"
clap = { version = "4.0", features = ["derive"] }