[package]
name = "cairo-native-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-sierra = "2.8.4"
cairo-native = "0.2.0-alpha.4"
clap = "4.5.20"
rand = "0.8.5"
starknet-types-core = "0.1.7"

[dependencies.felt]
git = 'https://github.com/FuzzingLabs/cairo-rs'
rev = '48af153240392992f18a09e969bae6518eec9639'
package = 'cairo-felt'
