[package]
name = "cairo-fuzzer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
num-bigint = { version = "0.4", features = ["serde"] }
cairo-rs = { git  = "https://github.com/FuzzingLabs/cairo-rs" }
num-traits = "0.2"
serde_json = "1.0"
cargo-libafl-helper = "0"
lazy_static = "1.4.0"

[dependencies.cairo-fuzzer]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "cairo_fuzzer"
path = "fuzz_targets/cairo_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "cairo_fuzzer_cargo_fuzz"
path = "fuzz_targets/cairo_fuzzer_cargo_fuzz.rs"
test = false
doc = false
