[package]
name = "rusticfuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
memory-stats = "1.1.0"

[dependencies]
bichannel = "0.0.4"
clap = { version = "4.4.4", features = ["derive"] }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
serde = "*"
serde_json = "1.0.107"
num-traits = '0.2.15'
strum = { version = "0.25", features = ["derive"] }
crossterm = "0.27.0"
time = "0.3.29"
chrono = "0.4.31"
itertools = "0.12.0"
log = "0.4.20"
cairo-lang-starknet = { version = "2.1.0-rc2", default-features = false }
cairo-lang-casm = { version = "2.1.0-rc2", default-features = false }

[dependencies.cairo-rs]
git = 'https://github.com/FuzzingLabs/cairo-rs'
rev = '48af153240392992f18a09e969bae6518eec9639'
package = 'cairo-vm'

[dependencies.felt]
git = 'https://github.com/FuzzingLabs/cairo-rs'
rev = '48af153240392992f18a09e969bae6518eec9639'
package = 'cairo-felt'

[dependencies.starknet-rs]
git = 'https://github.com/FuzzingLabs/starknet_in_rust/'
rev = '6ee8eef52af4c0fea78d951ee29e52940363be69'
package = 'starknet_in_rust'

[dependencies.num-bigint]
version = '0.4'
features = ['serde']