[package]
name = "cairo-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
cairo-rs = { git  = "https://github.com/raefko/cairo-rs" }
cairo-rs-py = { git  = "https://github.com/lambdaclass/cairo-rs-py" }
num-traits = "0.2"
serde_json = "1.0"
honggfuzz = "0.5.55"
arbitrary = {version="1.1.7", features= ["derive"], optional=true, default-features=false}
lazy_static = "1.4.0"
pyo3 = { version = "0.16.5" }


[features]
extension = ["pyo3/num-bigint", "pyo3/extension-module"]
default = ["pyo3/num-bigint", "pyo3/auto-initialize"]
